# ysirsky-music-v2-dev

./: .dockerignore  .gitignore  Dockerfile  README.md  issues.txt  pyproject.toml
src/: extra.py  main.py  music.py  state.py
src/handlers/: audio.py  button.py  download.py  photo.py  start.py  uptime.py
